force-app/main/default/objects/LNChatSession__c/LNChatSession__c.object-meta.xml
<CustomObject>
    <description>Stores AI chatbot conversation sessions, one per Salesforce record.</description>
    <label>LN Chat Session</label>
    <nameField>
        <displayFormat>CS-{0000000}</displayFormat>
        <label>LN Chat Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LN Chat Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>