force-app/main/default/objects/LNChatSession__c/fields/LastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>LastActivityDate__c</fullName>
    <description>Timestamp of the last message activity in this session.</description>
    <label>Last Activity Date</label>
    <type>DateTime</type>
</CustomField>