force-app/main/default/objects/LNChatSession__c/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <description>The API name of the Salesforce object (Account, Opportunity, etc.).</description>
    <label>Object API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>