force-app/main/default/objects/LNChatSession__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>The Salesforce record ID this session is associated with.</description>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>